update domo remote

--- a/app/index_mb.pug
+++ b/app/index_mb.pug
@@ -1,14 +1,14 @@
 extends ./_layout.pug
 block append style 
-  link(rel="stylesheet" href="./assets/css/style_mb.css")
+  link(rel="stylesheet" href="https://www.domohornwrinkle.net/landing/2104001/css/style_mb.css")
 block append content
   .container
     .wrapper
       .banner
         .banner__title
-          img(src="./assets/images/title_banner.png" alt="")
+          img(src="https://www.domohornwrinkle.net/landing/2104001/images/title_banner.png" alt="")
         .banner__img
-          img(src="./assets/images/img_banner.jpg" alt="")
+          img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_banner.jpg" alt="")
         .banner__cont
           | 天氣漸暖，迎接春夏的來臨，
           br
@@ -41,7 +41,7 @@ block append content
             .col__cont__tag 好禮1
             .col__cont__title.nosale 今治毛巾聯名款(2入)
           .col__img
-            img(src="./assets/images/img_02.jpg" alt="")
+            img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_02.jpg" alt="")
           .col__cont
             | 日本知名今治毛巾。100%純棉，以無捻紗混織製成，擁有蓬鬆細緻的柔滑觸感。
           .col__cont
@@ -58,7 +58,7 @@ block append content
               br
               | 認證字號：2021-112號
             .col__cont__logo
-              img(src="./assets/images/img_03.png", alt  ="")
+              img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_03.png", alt  ="")
           .btn.btn--senc
             a#n1(href="http://www.domohornwrinkle.com.tw/tc/beauty/detail/2102002/" target="_blank")
               span 一窺今治毛巾的魅力
@@ -67,7 +67,7 @@ block append content
             .col__cont__tag 好禮2
             .col__cont__title.nosale 基本4點(3日份)
           .col__img
-            img(src="./assets/images/img_04.jpg" alt="")
+            img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_04.jpg" alt="")
           .col__cont
             | 時時刻刻完整感受基本4點，全方位守護肌膚，揮別年齡肌煩惱。
           .btn
@@ -80,10 +80,10 @@ block append content
           .row__title__num 2
           .row__title__text 凡購買「美活肌精華」，點數2倍贈
         .row__cont.row__cont--point
-          img(src="./assets/images/img_05.png" alt="")
+          img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_05.png" alt="")
           .row__cont__desc
             | 美活肌精華能夠提升肌膚原有的循環代謝力，預防黑色素生成，由內而外綻放活力光采，實現透亮白皙的健康美肌。
-          img(src="./assets/images/img_06.png" alt="")
+          img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_06.png" alt="")
           .row__cont__desc
             | ※生日當月購買點數計算方式不同，詳情請洽免付費客服專線。
           .btn
@@ -103,37 +103,40 @@ block append content
               br
               | 6包入(共12枚)
             .col__cont__img 
-              img(src="./assets/images/icon_point.png" alt="")
+              img(src="https://www.domohornwrinkle.net/landing/2104001/images/icon_point.png" alt="")
           .col__cont
             .col__cont__img 
-              img(src="./assets/images/img_07.png" alt="")
+              img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_07.png" alt="")
             .col__cont__info
-              img(src="./assets/images/img_08.jpg" alt="")
-              img.ico(src="./assets/images/icon_night.png" alt="")
+              img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_08.jpg" alt="")
+              img.ico(src="https://www.domohornwrinkle.net/landing/2104001/images/icon_night.png" alt="")
               | 於「基本4點」後使用
           .col__cont
             | 彷彿果凍般的柔軟質地，可舒適地密著服貼眼周唇周肌膚，嚴選的優質大自然植物精華和膠原蛋白，滿滿完整地凝聚於果凍面膜中，讓100%的營養精華有效滲透至肌膚，讓您春季擁有充滿自信的笑容！
         .row__cont
           .table
-            .table__title 多種大自然精華，富含奢侈的美容成分！
+            .table__title
+              | 多種大自然精華，
+              br
+              | 富含奢侈的美容成分！
             .table__group
               .table__group__item
                 .table__group__item__img
-                  img(src="./assets/images/img_09.jpg" alt="")
+                  img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_09.jpg" alt="")
                 .table__group__info
                   .table__group__info__title 芍藥精華
                   .table__group__info__cont
                     | 幫助改善肌膚暗沉，細緻肌膚，綻現透亮粉嫩好氣色。
               .table__group__item
                 .table__group__item__img
-                  img(src="./assets/images/img_10.jpg" alt="")
+                  img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_10.jpg" alt="")
                 .table__group__info
                   .table__group__info__title 珍珠精華
                   .table__group__info__cont
                     | 預防黑色素沉澱，為肌膚帶來珍珠般耀眼的光彩。
               .table__group__item
                 .table__group__item__img
-                  img(src="./assets/images/img_11.jpg" alt="")
+                  img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_11.jpg" alt="")
                 .table__group__info
                   .table__group__info__title 法國薰衣草精華
                   .table__group__info__cont
@@ -145,9 +148,9 @@ block append content
     .wrapper
       .banner
         .banner__title
-          img(src="./assets/images/title_banner_mom.png" alt="")
+          img(src="https://www.domohornwrinkle.net/landing/2104001/images/title_banner_mom.png" alt="")
         .banner__img
-          img(src="./assets/images/img_banner_mom.jpg" alt="")
+          img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_banner_mom.jpg" alt="")
         .banner__btn
           .btn
             a#n5(href="http://www.domohornwrinkle.com.tw/tc/landing/2103001/" target="_blank")
