--- a/app/_layout.pug
+++ b/app/_layout.pug
@@ -5,7 +5,7 @@ html(lang="zh-TW")
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
     meta(content="width=device-width initial-scale=1 minimum-scale=1.0 maximum-scale=1.0 user-scalable=0" name="viewport")
     meta(http-equiv="X-UA-Compatible", content="IE=10,chrome=1")
-    base(href="./")
+    //- base(href="./")
     block style
     
   body
