--- a/app/assets/css/style/main.sass
+++ b/app/assets/css/style/main.sass
@@ -5,9 +5,10 @@
 .container
   font-size: 16px
   line-height: 1.6
+  +margin(0 auto)
   .wrapper
     width: 100%
-    max-width: 1000px
+    max-width: 1200px
     min-width: 860px
     font-size: 2.2em
     font-weight: 300
