--- a/app/assets/css/style/mobile.sass
+++ b/app/assets/css/style/mobile.sass
@@ -5,6 +5,7 @@
 .container
   font-size: 16px
   line-height: 1.6
+  +margin(0 auto)
   .wrapper
     width: 100%
     max-width: 640px
@@ -202,7 +203,7 @@
     color: $primary
     font-weight: 700
     text-align: center
-    font-size: 1.2em
+    font-size: 1.4em
     +padding(0.5em 0)
   &__group
     +flex
