--- a/app/index.pug
+++ b/app/index.pug
@@ -1,14 +1,14 @@
 extends ./_layout.pug
 block append style 
-  link(rel="stylesheet", href="https://www.domohornwrinkle.net/landing/2104001/css/style.css")
+  link(rel="stylesheet", href="./assets/css/style.css")
 block append content
   .container
     .wrapper
       .banner
         .banner__title
-          img(src="https://www.domohornwrinkle.net/landing/2104001/images/title_banner.png", alt="")
+          img(src="./assets/images/title_banner.png", alt="")
         .banner__img
-          img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_banner.jpg", alt="")
+          img(src="./assets/images/img_banner.jpg", alt="")
         .banner__cont
           | 天氣漸暖，迎接春夏的來臨，
           br
@@ -35,11 +35,11 @@ block append content
       .row 
         .row__title
           .row__title__num 1
-          .row__title__text 購齊「基本4點」，即可獲得2大好禮
+          .row__title__text 4/1～6/30，購齊「基本4點」，即可獲得2大好禮
         .row__cont
           .col
             .col__img
-              img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_02.jpg", alt="")
+              img(src="./assets/images/img_02.jpg", alt="")
             .col__cont
               .col__cont__tag 好禮1
               .col__cont__title.nosale 今治毛巾聯名款(2入)
@@ -47,7 +47,7 @@ block append content
                 | 日本知名今治毛巾。100%純棉，以無捻紗混織製成，擁有蓬鬆細緻的柔滑觸感。
           .col
             .col__img
-              img.logo(src="https://www.domohornwrinkle.net/landing/2104001/images/img_03.png", alt="")
+              img.logo(src="./assets/images/img_03.png", alt="")
             .col__cont
               .col__cont__desc
                 | 2021年限定聯名企劃，特別邀請台灣人氣設計師「露台上的波麗」的印花作品與日本引以為傲的高品質今治毛巾結合，綴滿美麗繽紛花朵的今治毛巾呵護您美麗的肌膚！
@@ -63,7 +63,7 @@ block append content
         .row__cont
           .col
             .col__img
-              img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_04.jpg", alt="")
+              img(src="./assets/images/img_04.jpg", alt="")
             .col__cont
               .col__cont__tag 好禮2
               .col__cont__title.nosale 基本4點(3日份)
@@ -77,17 +77,17 @@ block append content
       .row 
         .row__title
           .row__title__num 2
-          .row__title__text 凡購買「美活肌精華」，點數2倍贈
+          .row__title__text 4/1～6/30，凡購買「美活肌精華」，點數2倍贈
         .row__cont
           .col.col--points
             .col__img
-              img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_05.png", alt="")
+              img(src="./assets/images/img_05.png", alt="")
             .col__cont
               .col__cont__desc
                 | 美活肌精華能夠提升肌膚原有的循環代謝力，預防黑色素生成，由內而外綻放活力光采，實現透亮白皙的健康美肌。
           .col.col--points
             .col__info
-              img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_06.png", alt="")
+              img(src="./assets/images/img_06.png", alt="")
           .col
             .col__info
               | ※生日當月購買點數計算方式不同，詳情請洽免付費客服專線。
@@ -99,7 +99,7 @@ block append content
       .row 
         .row__title
           .row__title__num 3
-          .row__title__text 購買任一商品同時，即可用「10點」點數兌換春季限定「春漾果凍面膜」
+          .row__title__text 4/1～6/30，購買任一商品同時，即可用「10點」點數兌換春季限定「春漾果凍面膜」
         .row__cont.row__cont--only
           .col
             .col__cont
@@ -109,15 +109,15 @@ block append content
                 br
                 | 6包入(共12枚)
               .col__cont__desc
-                img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_07.png", alt="")
+                img(src="./assets/images/img_07.png", alt="")
               .col__cont__info
-                img.ico(src="https://www.domohornwrinkle.net/landing/2104001/images/icon_night.png", alt="")
+                img.ico(src="./assets/images/icon_night.png", alt="")
                 | 於「基本4點」後使用
           
             .col__cont
               .col__cont__img 
-                img(src="https://www.domohornwrinkle.net/landing/2104001/images/icon_point.png", alt="")
-                img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_08.jpg", alt="")
+                img(src="./assets/images/icon_point.png", alt="")
+                img(src="./assets/images/img_08.jpg", alt="")
               .col__cont__desc
                 | 彷彿果凍般的柔軟質地，可舒適地密著服貼眼周唇周肌膚，嚴選的優質大自然植物精華和膠原蛋白，滿滿完整地凝聚於果凍面膜中，讓100%的營養精華有效滲透至肌膚，讓您春季擁有充滿自信的笑容！
           .col
@@ -126,19 +126,19 @@ block append content
               .table__group
                 .table__group__item
                   .table__group__item__img
-                    img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_09.jpg", alt="")
+                    img(src="./assets/images/img_09.jpg", alt="")
                   .table__group__item__title 芍藥精華
                   .table__group__item__cont
                     | 幫助改善肌膚暗沉，細緻肌膚，綻現透亮粉嫩好氣色。
                 .table__group__item
                   .table__group__item__img
-                    img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_10.jpg", alt="")
+                    img(src="./assets/images/img_10.jpg", alt="")
                   .table__group__item__title 珍珠精華
                   .table__group__item__cont
                     | 預防黑色素沉澱，為肌膚帶來珍珠般耀眼的光彩。
                 .table__group__item
                   .table__group__item__img
-                    img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_11.jpg", alt="")
+                    img(src="./assets/images/img_11.jpg", alt="")
                   .table__group__item__title 法國薰衣草精華
                   .table__group__item__cont
                     | 保濕滋潤，有效舒緩肌膚。
@@ -146,16 +146,32 @@ block append content
             a#n4(href="https://www.domohornwrinkle.com.tw/tc/domo/login/", target="_blank")
               span 立即享有期間限定回饋
 
-    .wrapper
-      .banner
-        .banner__title
-          img(src="https://www.domohornwrinkle.net/landing/2104001/images/title_banner_mom.png", alt="")
-        .banner__img
-          img(src="https://www.domohornwrinkle.net/landing/2104001/images/img_banner_mom.jpg", alt="")
-        .banner__btn
+    .wrapper  
+      .row 
+        .row__title
+          .row__title__num 4
+          .row__title__text 6/1~8/31，購買任一商品同時，即可用「6點」點數兌換「涼花 」
+        .row__cont
+          .col
+            .col__img
+              img(src="./assets/images/img_12.png", alt="")
+            .col__cont
+              .col__cont__title.nosale  涼花清爽噴霧
+              .col__cont__desc
+                | 50mL（1次噴4下，約可噴180次）
+                br
+                | 任何時間都可使用。
+              .col__cont__img 
+                img(src="./assets/images/img_13.png", alt="")
+          .col
+            .col__cont__desc
+              | 全新推出的「涼花清爽噴霧」內含薄荷葉油、迷迭香精華，清新自然的沁涼感能緩解夏季悶熱；白芍藥精華則能重整角質預防乾燥！夏季肌膚感到悶熱乾燥時，不論何時噴上它，即可全天候呵護肌膚，讓夏季保養沁涼清爽。
+              br
+              | ※此產品可以放入冰箱冷藏室冰鎮後使用。
+  
           .btn
-            a#n5(href="http://www.domohornwrinkle.com.tw/tc/landing/2103001/", target="_blank")
-              span 立即了解活動內容
+            a#n5(href="https://www.domohornwrinkle.com.tw/tc/domo/login/", target="_blank")
+              span 立即享有期間限定回饋
       
     .wrapper
       .footer
